--- a/src/locales/zh-TW.json
+++ b/src/locales/zh-TW.json
@@ -18,7 +18,9 @@
       "eqalarm": "設備警報",
       "Turnoffbuzzer": "關閉蜂鳴器"
     },
-    "LaterRemindMe": "稍後再提醒我"
+    "LaterRemindMe": "稍後再提醒我",
+    "AutoLogoutNotify": "已自動登出",
+    "PushOkToRefreshPage": "按下 'OK' 以重新整理頁面"
   },
   "Menu": {
     "Home": "主頁",
