新增點位停留時間熱點顯示功能與API串接 (待完善)

--- a/src/locales/en-US.json
+++ b/src/locales/en-US.json
@@ -41,7 +41,8 @@
     "Alarm History": "Alarm History",
     "Trajectory": "Trajectory",
     "Instruments Measure Result": "Instruments Measure",
-    "utilization rate": "Utilization"
+    "utilization rate": "Utilization",
+    "Traffic State": "Traffic State"
   },
   "HomeView": {
     "AGVStatus": {
