Enhance MissionCard and RunningTaskTable components for improved task management: - Updated MissionCard.vue to display task state, action tags, and detailed information with enhanced styling. - Implemented cancel task functionality with user confirmation. - Modified RunningTaskTable.vue to categorize tasks into 'Executing' and 'Waiting' states with appropriate labels and notifications. - Updated localization files for consistent terminology in English and Chinese.

--- a/src/locales/en-US.json
+++ b/src/locales/en-US.json
@@ -161,8 +161,8 @@
     "Final": "Final",
     "TaskStatus": "Status",
     "ExcuteAgvName": "AGV Name",
-    "Source": "From",
-    "Destine": "Destine",
+    "Source": "SOURCE",
+    "Destine": "DESTINE",
     "Source_Slot": "Source Slot",
     "Destine_Slot": "Destine Slot",
     "Dispatcher": "Dispatcher",
