--- a/src/locales/zh-TW.json
+++ b/src/locales/zh-TW.json
@@ -161,8 +161,8 @@
     "Final": "執行結果",
     "TaskStatus": "狀態",
     "ExcuteAgvName": "執行車輛",
-    "Source": "起點",
-    "Destine": "終點",
+    "Source": "來源",
+    "Destine": "目的地",
     "Source_Slot": "起點 Slot",
     "Destine_Slot": "終點 Slot",
     "Dispatcher": "派工人員",
