Enhance MissionCard functionality and localization updates: - Updated MissionCard.vue to conditionally display cancel/abort actions based on task state. - Added new localization entries for 'Cancel' and 'Abort' actions in both English and Chinese. - Refined HomeView.vue layout with improved styling for navigation items and tabs for better user experience.

--- a/src/locales/en-US.json
+++ b/src/locales/en-US.json
@@ -318,7 +318,7 @@
   "RedoTaskFail": "Re-assign Order Fail...",
   "secsGem": {
     "UnloadButCargoIDReadNotMatched": "CST ID Read Value Not Matched",
-    "UnloadButCargoIDReadFail": "CST ID Read Fail", 
+    "UnloadButCargoIDReadFail": "CST ID Read Fail",
     "EqUnloadButNoCargo": "Port Unload But Carrier Not Exist",
     "AGVDownWhenLDULDWithCargo": "AGV Error During Load/Unload - Carrier On AGV",
     "AGVDownWhenLDWithoutCargo": "AGV Error During Load - Carrier On Equipment",
@@ -337,5 +337,9 @@
     "SourceEqDown": "Source Equipment Down",
     "DestineRackPortHasCargo": "Destination Rack Port Has Carrier",
     "SourceRackPortNotHasCargo": "Source Rack Port No Carrier"
+  },
+  "MissionCard": {
+    "CancelOrder": "Cancel",
+    "AbortOrder": "Abort"
   }
 }
