修改 VehicleInfocard.vue 與 i18n 翻譯文件  :  當進行深充時，充電按鈕顯示 '深充中'

--- a/src/locales/en-US.json
+++ b/src/locales/en-US.json
@@ -352,5 +352,6 @@
   "CarrierExistSensor_Rack": "Exist State(Rack)",
   "TrayDirection": "Tray Direction",
   "InstallTime": "Install Time",
-  "WaitingForExecution": "Waiting For Execution"
+  "WaitingForExecution": "Waiting For Execution",
+  "DeepCharging": "Deep Charging"
 }
