Refactor VehicleInfoCard.vue: Simplified HTML and use i18n to translate charge buttons

--- a/src/locales/en-US.json
+++ b/src/locales/en-US.json
@@ -126,9 +126,9 @@
   "auto-choise-vehicle": "Auto Assignment",
   "Transfer": "Transfer",
   "Charge": "Charge",
-  "NormalCharge": "NormalCharge",
-  "DepCharge": "DeepCharge",
-  "CancelDeepCharge": "CancelDeepCharge",
+  "NormalCharge": "Charge",
+  "DepCharge": "Deep Charge",
+  "CancelDeepCharge": "Stop Deep Charge",
   "Exchange Battery": "Exchange Battery",
   "ConfirmTask": "Are you sure",
   "ToCharge": "to chargestation",
