Alarm 查詢頁面新增關鍵字查詢功能

--- a/src/locales/en-US.json
+++ b/src/locales/en-US.json
@@ -398,5 +398,6 @@
     "AGVOperations": "AGV Operations",
     "UserLogin": "User Login",
     "SystemOperations": "System Operations"
-  }
+  },
+  "KeywordSearch": "Keyword Search"
 }
