新增 Return Code 設定畫面

--- a/src/locales/en-US.json
+++ b/src/locales/en-US.json
@@ -368,7 +368,43 @@
     "DoubleUnknowDFlowNumberUsed": "DoubleNumberUsed(TrayID)",
     "DoubleUnknowRackIDFlowNumberUsed": "DoubleNumberUsed(RACKID)",
     "MissMatchTrayIDFlowNumberUsed": "MissMatchNumberUsed(TrayID)",
-    "MissMatchRackIDFlowNumberUsed": "MissMatchNumberUsed(RACKID)"
+    "MissMatchRackIDFlowNumberUsed": "MissMatchNumberUsed(RACKID)",
+    "Control_State_Not_At_Online_Remote": "Control_State_Not_At_Online_Remote",
+    "Cannot_Create_Command_By_Exception": "Cannot_Create_Command_By_Exception",
+    "Not_Assign_Source_Port": "Not_Assign_Source_Port",
+    "Cannot_Find_Source_Port": "Cannot_Find_Source_Port",
+    "Not_Assign_Destination_Port": "Not_Assign_Destination_Port",
+    "Cannot_Find_Destination_Port": "Cannot_Find_Destination_Port",
+    "Cannot_Perform_Unload_For_Source_Port": "Cannot_Perform_Unload_For_Source_Port",
+    "Cannot_Perform_Load_For_Destination_Port": "Cannot_Perform_Load_For_Destination_Port",
+    "Save_Command_Data_To_Database_Fail": "Save_Command_Data_To_Database_Fail",
+    "Source_Port_Assign_Wrong_AGV": "Source_Port_Assign_Wrong_AGV",
+    "AGV_Cargo_Status_Mismatch_With_Command": "AGV_Cargo_Status_Mismatch_With_Command",
+    "Wrong_Command_Data_Cause_Exception": "Wrong_Command_Data_Cause_Exception",
+    "Signal_Is_Not_Load_Request_For_Destination_Port": "Signal_Is_Not_Load_Request_For_Destination_Port",
+    "Signal_Is_Not_Unload_Request_For_Source_Port": "Signal_Is_Not_Unload_Request_For_Source_Port",
+    "Cannot_Detect_Carrier_Exist_For_Source_Port": "Cannot_Detect_Carrier_Exist_For_Source_Port",
+    "Equipment_Status_Is_Down": "Equipment_Status_Is_Down",
+    "Detect_Carrier_Exist_For_Destination_Port": "Detect_Carrier_Exist_For_Destination_Port",
+    "Equipment_Load_Request_And_Unload_Request_Both_ON": "Equipment_Load_Request_And_Unload_Request_Both_ON",
+    "Equipment_Load_Request_And_Unload_Request_Both_OFF": "Equipment_Load_Request_And_Unload_Request_Both_OFF",
+    "Unknown_Conditions": "Unknown_Conditions",
+    "Cannot_Find_The_Carrier_ID_In_Rack": "Cannot_Find_The_Carrier_ID_In_Rack",
+    "Cannot_Find_Seat_For_The_Carrier_In_Rack": "Cannot_Find_Seat_For_The_Carrier_In_Rack",
+    "Not_Assign_Vehicle_For_Abnormal_Transfer": "Not_Assign_Vehicle_For_Abnormal_Transfer",
+    "Source_PorSource_Port_Assign_AGV_But_Already_Exist_Same_Commandt_Assign_Wrong_AGV": "Source_PorSource_Port_Assign_AGV_But_Already_Exist_Same_Commandt_Assign_Wrong_AGV",
+    "Not_Assign_Carrier_ID_For_Command": "Not_Assign_Carrier_ID_For_Command",
+    "Rack_Source_Port_Already_Has_Task": "Rack_Source_Port_Already_Has_Task",
+    "Rack_Source_Port_Position_Is_Disable": "Rack_Source_Port_Position_Is_Disable",
+    "Rack_Source_Port_Exist_Multiple_Same_Carrier_Id": "Rack_Source_Port_Exist_Multiple_Same_Carrier_Id",
+    "Rack_Destination_Port_Already_Has_Task": "Rack_Destination_Port_Already_Has_Task",
+    "Rack_Destination_Port_Position_Is_Disable": "Rack_Destination_Port_Position_Is_Disable",
+    "Rack_Destination_Port_Already_Has_Data": "Rack_Destination_Port_Already_Has_Data",
+    "Source_Port_Unload_Request_Is_OFF": "Source_Port_Unload_Request_Is_OFF",
+    "Destination_Port_Load_Request_Is_OFF": "Destination_Port_Load_Request_Is_OFF",
+    "Source_Port_Is_Disconnected": "Source_Port_Is_Disconnected",
+    "Destination_Port_Is_Disconnected": "Destination_Port_Is_Disconnected",
+    "Rack_Sensor_Is_Error": "Rack_Sensor_Is_Error"
   },
   "MissionCard": {
     "CancelOrder": "Cancel",
