--- a/src/locales/zh-TW.json
+++ b/src/locales/zh-TW.json
@@ -374,7 +374,43 @@
     "DoubleUnknowDFlowNumberUsed": "已使用的重複ID(TRAY)",
     "DoubleUnknowRackIDFlowNumberUsed": "已使用的重複ID(RACK)",
     "MissMatchTrayIDFlowNumberUsed": "已使用的不相符ID(TRAY)",
-    "MissMatchRackIDFlowNumberUsed": "已使用的不相符ID(RACK)"
+    "MissMatchRackIDFlowNumberUsed": "已使用的不相符ID(RACK)",
+    "Control_State_Not_At_Online_Remote": "派車非 Online/Remote 模式",
+    "Cannot_Create_Command_By_Exception": "因異常無法創建命令",
+    "Not_Assign_Source_Port": "未指定來源站點",
+    "Cannot_Find_Source_Port": "找不到來源站點",
+    "Not_Assign_Destination_Port": "未指定目標站點",
+    "Cannot_Find_Destination_Port": "找不到目標站點",
+    "Cannot_Perform_Unload_For_Source_Port": "無法在來源站點執行卸載",
+    "Cannot_Perform_Load_For_Destination_Port": "無法在目標站點執行裝載",
+    "Save_Command_Data_To_Database_Fail": "保存命令數據到數據庫失敗",
+    "Source_Port_Assign_Wrong_AGV": "來源站點分配了錯誤的AGV",
+    "AGV_Cargo_Status_Mismatch_With_Command": "AGV貨物狀態與命令不匹配",
+    "Wrong_Command_Data_Cause_Exception": "錯誤的命令數據導致異常",
+    "Signal_Is_Not_Load_Request_For_Destination_Port": "目標站點無裝載請求信號",
+    "Signal_Is_Not_Unload_Request_For_Source_Port": "來源站點無卸載請求信號",
+    "Cannot_Detect_Carrier_Exist_For_Source_Port": "無法檢測到來源站點的載具存在",
+    "Equipment_Status_Is_Down": "設備狀態為停機",
+    "Detect_Carrier_Exist_For_Destination_Port": "檢測到目標站點已有載具",
+    "Equipment_Load_Request_And_Unload_Request_Both_ON": "設備裝載和卸載請求信號同時開啟",
+    "Equipment_Load_Request_And_Unload_Request_Both_OFF": "設備裝載和卸載請求信號同時關閉",
+    "Unknown_Conditions": "未知條件",
+    "Cannot_Find_The_Carrier_ID_In_Rack": "在料架中找不到指定載具ID",
+    "Cannot_Find_Seat_For_The_Carrier_In_Rack": "在料架中找不到載具的位置",
+    "Not_Assign_Vehicle_For_Abnormal_Transfer": "異常搬運未指定車輛",
+    "Source_PorSource_Port_Assign_AGV_But_Already_Exist_Same_Commandt_Assign_Wrong_AGV": "來源站點已分配AGV但存在相同命令",
+    "Not_Assign_Carrier_ID_For_Command": "命令未指定載具ID",
+    "Rack_Source_Port_Already_Has_Task": "料架來源站點已有任務",
+    "Rack_Source_Port_Position_Is_Disable": "料架來源站點位置已禁用",
+    "Rack_Source_Port_Exist_Multiple_Same_Carrier_Id": "料架來源站點存在多個相同載具ID",
+    "Rack_Destination_Port_Already_Has_Task": "料架目標站點已有任務",
+    "Rack_Destination_Port_Position_Is_Disable": "料架目標站點位置已禁用",
+    "Rack_Destination_Port_Already_Has_Data": "料架目標站點已有數據",
+    "Source_Port_Unload_Request_Is_OFF": "來源站點卸載請求為關閉狀態",
+    "Destination_Port_Load_Request_Is_OFF": "目標站點裝載請求為關閉狀態",
+    "Source_Port_Is_Disconnected": "來源站點已斷開連接",
+    "Destination_Port_Is_Disconnected": "目標站點已斷開連接",
+    "Rack_Sensor_Is_Error": "在席感測器錯誤"
   },
   "MissionCard": {
     "CancelOrder": "取消任務",
